// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicatinLocked renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "flex": 1,
        "flexBasis": 0,
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      },
      null,
    ]
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 3,
            "justifyContent": "center",
            "paddingLeft": 48,
            "paddingRight": 48,
          },
          null,
          Object {
            "opacity": 0,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#445878",
              "fontSize": 20,
              "fontWeight": "200",
              "marginBottom": 64,
              "opacity": 0.6,
            },
            null,
          ]
        }
      >
        Maximum attempts reached
      </Text>
      <View
        style={
          Array [
            Object {
              "borderColor": "rgb(230, 231, 233)",
              "borderRadius": 4,
              "borderWidth": 2,
              "marginBottom": 64,
              "paddingBottom": 10,
              "paddingLeft": 30,
              "paddingRight": 30,
              "paddingTop": 10,
            },
            null,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#445878",
                "fontFamily": "Courier",
                "fontSize": 20,
              },
              null,
            ]
          }
        >
          00:00
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FC4349",
              "borderRadius": 32,
              "height": 64,
              "justifyContent": "center",
              "marginBottom": 64,
              "opacity": 0.6,
              "overflow": "hidden",
              "width": 64,
            },
            null,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontSize": 24,
              },
              undefined,
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#445878",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        To protect your information, access has been locked for NaN minutes.
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#445878",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        Come back later and try again.
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "opacity": 0,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginTop": 32,
              "opacity": 0.6,
            },
            null,
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#7BCDD0",
              "borderRadius": 2,
              "opacity": 1,
              "paddingBottom": 16,
              "paddingLeft": 32,
              "paddingRight": 32,
              "paddingTop": 16,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "bold",
                },
                null,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PinCode renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 2,
          "flexDirection": "column",
          "justifyContent": "flex-end",
        },
        null,
        Object {
          "opacity": 0,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 20,
            "fontWeight": "200",
            "lineHeight": 40,
          },
          null,
          Object {
            "color": "#9dafc8",
            "opacity": 1,
          },
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 16,
            "fontWeight": "200",
            "textAlign": "center",
          },
          null,
          Object {
            "color": "#9dafc8",
            "opacity": 1,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 2,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "auto",
            "justifyContent": "center",
          },
          null,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 7,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexShrink": 1,
          "height": 88,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="1"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              1
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="2"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              2
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="3"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              3
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexShrink": 1,
          "height": 88,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="4"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              4
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="5"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              5
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="6"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              6
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexShrink": 1,
          "height": 88,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="7"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              7
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="8"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              8
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="9"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              9
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexShrink": 0,
          "height": 88,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="0"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(242, 245, 251)",
                "borderRadius": 32,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              Object {
                "backgroundColor": "rgb(242, 245, 251)",
              },
              null,
            ]
          }
        >
          <View
            style={null}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontSize": 32,
                    "fontWeight": "200",
                  },
                  null,
                  Object {
                    "color": "#9dafc8",
                    "opacity": 1,
                  },
                ]
              }
            >
              0
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "column",
            "height": 64,
            "marginLeft": 8,
            "marginRight": 8,
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="delete"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgb(211, 213, 218)",
                    "fontSize": 30,
                  },
                  Object {
                    "opacity": 0.5,
                  },
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontWeight": "200",
                    "marginTop": 5,
                  },
                  null,
                  Object {
                    "color": "rgb(211, 213, 218)",
                    "opacity": 0.5,
                  },
                ]
              }
            >
              delete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PinCodeChoose renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        },
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 2,
            "flexDirection": "column",
            "justifyContent": "flex-end",
          },
          null,
          Object {
            "opacity": 0,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 20,
              "fontWeight": "200",
              "lineHeight": 40,
            },
            null,
            Object {
              "color": "#9dafc8",
              "opacity": 1,
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "200",
              "textAlign": "center",
            },
            null,
            Object {
              "color": "#9dafc8",
              "opacity": 1,
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 2,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "auto",
              "justifyContent": "center",
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 7,
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="1"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                1
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="2"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                2
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="3"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                3
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="4"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                4
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="5"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                5
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="6"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                6
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="7"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                7
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="8"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                8
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="9"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                9
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 0,
            "height": 88,
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="0"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                0
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="delete"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  },
                  null,
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgb(211, 213, 218)",
                      "fontSize": 30,
                    },
                    Object {
                      "opacity": 0.5,
                    },
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontWeight": "200",
                      "marginTop": 5,
                    },
                    null,
                    Object {
                      "color": "rgb(211, 213, 218)",
                      "opacity": 0.5,
                    },
                  ]
                }
              >
                delete
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PinCodeEnter renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        },
        null,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 2,
            "flexDirection": "column",
            "justifyContent": "flex-end",
          },
          null,
          Object {
            "opacity": 0,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 20,
              "fontWeight": "200",
              "lineHeight": 40,
            },
            null,
            Object {
              "color": "#9dafc8",
              "opacity": 1,
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "200",
              "textAlign": "center",
            },
            null,
            Object {
              "color": "#9dafc8",
              "opacity": 1,
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 2,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "auto",
              "justifyContent": "center",
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#7BCDD0",
                  "borderRadius": 2,
                  "height": 4,
                  "left": 0,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "opacity": 0.5,
                  "width": 4,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 7,
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="1"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                1
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="2"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                2
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="3"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                3
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="4"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                4
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="5"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                5
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="6"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                6
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 1,
            "height": 88,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="7"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                7
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="8"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                8
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="9"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                9
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0,
            "flexDirection": "row",
            "flexShrink": 0,
            "height": 88,
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="0"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(242, 245, 251)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                },
                Object {
                  "backgroundColor": "rgb(242, 245, 251)",
                },
                null,
              ]
            }
          >
            <View
              style={null}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 32,
                      "fontWeight": "200",
                    },
                    null,
                    Object {
                      "color": "#9dafc8",
                      "opacity": 1,
                    },
                  ]
                }
              >
                0
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 64,
              "marginLeft": 8,
              "marginRight": 8,
              "width": 64,
            }
          }
        >
          <View
            accessibilityLabel="delete"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  },
                  null,
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgb(211, 213, 218)",
                      "fontSize": 30,
                    },
                    Object {
                      "opacity": 0.5,
                    },
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontWeight": "200",
                      "marginTop": 5,
                    },
                    null,
                    Object {
                      "color": "rgb(211, 213, 218)",
                      "opacity": 0.5,
                    },
                  ]
                }
              >
                delete
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
